erDiagram
    UTILISATEUR {
        int id_utilisateur PK
        varchar nom
        varchar email
        enum role
    }
    ITINERAIRE {
        int id_itineraire PK
        int id_utilisateur FK
        int id_destination FK
        varchar titre
        enum statut
        date date_debut
        date date_fin
        int nb_voyageurs
        decimal cout_total
        datetime date_creation
    }
    ELEMENT_ITINERAIRE {
        int id_element PK
        int id_itineraire FK
        enum type_element
        int id_element_ref
        int quantite
        decimal prix_unitaire
        datetime date_debut
        datetime date_fin
        int ordre
    }
    NOTIFICATION {
        int id_notif PK
        int id_utilisateur FK
        enum type
        varchar titre
        text message
        boolean lu
        datetime date_envoi
    }
    SESSION {
        int id_session PK
        int id_utilisateur FK
        varchar token
        datetime expire_le
        varchar ip_adresse
    }

    UTILISATEUR ||--o{ ITINERAIRE : "cree (1,N)"
    ITINERAIRE ||--o{ ELEMENT_ITINERAIRE : "contient (1,N)"
    UTILISATEUR ||--o{ NOTIFICATION : "recoit (1,N)"
    UTILISATEUR ||--o{ SESSION : "ouvre (1,N)"
